feat: 完善后端接口联调能力并补充北交食堂种子数据
主要工作

数据库字段与图片路径统一

全面改为使用 images 字段，不再依赖旧的 image 字段。
新增 JsonListUtil 处理数据库中 JSON 数组格式的图片字段。
新增 ImageUrlUtil，实现“数据库存相对路径，接口返回完整 URL”。
上传接口返回相对路径，如 /images/2026/06/xxx.jpg。
静态资源通过 /api/images/** 访问。
食堂与档口接口完善

实现 /canteens 食堂列表。
实现 /canteens/images 食堂图片映射。
实现 /canteens/banners 首页轮播图。
修复 /canteens/stallDetail，支持 canteen / canteenName 查询。
修复 /canteens/all，现在返回食堂及其下属档口数据。
/stalls?canteenId=... 返回档口 VO，并拼接完整图片地址。
菜品接口完善

实现 /dishes 分页查询。
支持 keyword、canteenId、stallId、tag、价格区间、排序参数。
keyword 现在支持匹配菜品名、档口名、食堂名和标签。
实现 /dishes/hot 热门菜品。
实现 /dishes/{id} 详情，包括评分分布、是否收藏、是否评价。
通过 XML 联表查询补齐 canteenName、stallName、images 等前端字段。
用户与认证接口完善

登录、注册、个人资料、资料更新、用户统计接口完善。
新增 SecurityUtil 统一获取当前登录用户。
JWT 鉴权接入收藏、评价、清单等登录态接口。
用户头像也支持相对路径转完整 URL。
收藏与评价模块完善

实现 /favorites 收藏列表，返回完整菜品数据。
实现 /favorites/toggle 收藏/取消收藏。
实现批量收藏接口。
收藏变更后同步菜品收藏数。
评价接口支持提交、列表、隐藏/删除管理逻辑。
评价图片统一使用 images JSON 数组。
美食清单模块接入真实服务

修复原先 Controller 中的 TODO 占位返回。
实现创建清单、我的清单、清单详情、删除清单、分享查看、一键收藏。
清单详情返回菜品摘要，并包含图片、价格、评分、档口名。
种子数据与图片资源

新增 docs/bjtu-food-seed.sql。
按“物理食堂 = canteen，楼层/窗口 = stall”重新建模。
补充 8 个食堂、19 个档口、42 个菜品，以及收藏、评价、banner 数据。
图片路径改为相对路径 /images/seed/...。
下载并加入本地种子图片到 backend/uploads/images/seed/。
修改 .gitignore，允许提交种子图片目录，但继续忽略普通上传文件。
配置与文档

application.yml 增加/调整：
server.address=0.0.0.0
app.public-base-url
upload.path
upload.url-prefix
更新 API 文档和后端实施方案文档。
保留局域网测试配置方式：通过 APP_PUBLIC_BASE_URL 指定后端访问地