@@ -10,6 +10,7 @@ import org.springframework.web.multipart.MultipartFile;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.Locale;
@@ -19,30 +20,44 @@ import java.util.UUID;
 @Service
 public class UploadServiceImpl implements UploadService {
 
-    private static final Set<String> ALLOWED_EXTENSIONS = Set.of("jpg", "jpeg", "png");
+    private static final Set<String> ALLOWED_EXTENSIONS = Set.of("jpg", "jpeg", "png", "webp");
 
-    @Value("${upload.path:./uploads}")
+    @Value("${upload.path:./uploads/images}")
     private String uploadPath;
+
+    @Value("${upload.url-prefix:/images}")
+    private String urlPrefix;
 
     @Override
     public String uploadImage(MultipartFile file) {
         if (file == null || file.isEmpty()) {
-            throw new BusinessException("File is empty");
+            throw new BusinessException("文件不能为空");
         }
-        String original = file.getOriginalFilename();
-        String extension = StringUtils.getFilenameExtension(original);
+
+        String originalFilename = file.getOriginalFilename();
+        String extension = StringUtils.getFilenameExtension(originalFilename);
         if (extension == null || !ALLOWED_EXTENSIONS.contains(extension.toLowerCase(Locale.ROOT))) {
-            throw new BusinessException("Unsupported file type");
+            throw new BusinessException("仅支持 jpg、jpeg、png、webp 图片");
         }
+
         String datePath = LocalDate.now().format(DateTimeFormatter.ofPattern("yyyy/MM"));
         String filename = UUID.randomUUID() + "." + extension.toLowerCase(Locale.ROOT);
-        Path dir = Path.of(uploadPath, datePath);
+        Path dir = Paths.get(uploadPath, datePath).toAbsolutePath().normalize();
+
         try {
             Files.createDirectories(dir);
             file.transferTo(dir.resolve(filename));
         } catch (IOException e) {
-            throw new BusinessException("Upload failed");
+            throw new BusinessException("图片上传失败");
         }
-        return "/uploads/" + datePath + "/" + filename;
+
+        return trimEnd(urlPrefix, "/") + "/" + datePath + "/" + filename;
+    }
+
+    private String trimEnd(String value, String suffix) {
+        while (value.endsWith(suffix)) {
+            value = value.substring(0, value.length() - suffix.length());
+        }
+        return value;
     }
 }
